# CoreFlows

./: CMakeLists.txt  CoreFlows.sh  CoreFlows_clean.sh  CoreFlows_install.sh  CoreFlows_tests.sh  README.md  configure  env_CoreFlows.sh
CoreFlows_src/: CMakeLists.txt  CMakeLists.txt~  CPackLists.txt  main.cxx
CoreFlows_src/Documentation/: examples.dox  examples.dox~  install.dox  install.dox~  intro.dox~  numericalPage.dox~
CoreFlows_src/Documentation/Examples/: Example5EqPage.dox  Example5EqPage.dox~  ExampleDiffusEqPage.dox~  ExampleDriftModelPage.dox  ExampleDriftModelPage.dox~  ExampleIsothermalPage.dox~  ExampleSinglePhase.dox~  ExampleTransEqPage.dox~
CoreFlows_src/Documentation/PhysicalModels/: DiffusionEq.dox  ScalarModelsPage.dox
CoreFlows_src/Documentation/PhysicalModels/TwoPhase/: DriftModelPage.dox  DriftModelPage.dox.backup  DriftModelPage.dox~  FiveEqPage.dox.backup  IsothermalPage.dox.backup  IsothermalPage.dox~
CoreFlows_src/Models/: CMakeLists.txt~
CoreFlows_src/Models/inc/: CMakeLists.txt  DiffusionEquation.hxx  DriftModel.hxx  FiveEqsTwoFluid.hxx  Fluide.h  IsothermalTwoFluid.hxx  ProblemCoreFlows.hxx  ProblemFluid.hxx  SinglePhase.hxx
CoreFlows_src/Models/src/: CMakeLists.txt  DiffusionEquation.cxx  DriftModel.cxx  FiveEqsTwoFluid.cxx  Fluide.cxx  IsothermalTwoFluid.cxx  ProblemCoreFlows.cxx  ProblemFluid.cxx  SinglePhase.cxx  TransportEquation.cxx  utilitaire_algebre.cxx
CoreFlows_src/cmake_files/: CodeCoverage.cmake~  FindPETSc.cmake  FindPETSc.cmake~
CoreFlows_src/conf/: env.sh
CoreFlows_src/examples/: CMakeLists.txt  CMakeLists.txt~  CoupledTransportDiffusionEquations_1DHeatedChannel.cxx  DiffusionEquation_1DHeatedRod.cxx  DriftModel_1DBoilingAssembly.cxx  DriftModel_1DBoilingChannel.cxx  DriftModel_1DChannelGravity.cxx  DriftModel_1DDepressurisation.cxx  DriftModel_1DPorosityJump.cxx  DriftModel_1DPressureLoss.cxx  DriftModel_1DRiemannProblem.cxx  DriftModel_1DVidangeReservoir.cxx  DriftModel_2DInclinedBoilingChannel.cxx  DriftModel_2DInclinedChannelGravity.cxx  DriftModel_2DInclinedChannelGravityBarriers.cxx  DriftModel_3DCanalCloison.cxx  FiveEqsTwoFluid_1DBoilingChannel.cxx  FiveEqsTwoFluid_1DDepressurisation.cxx  FiveEqsTwoFluid_1DRiemannProblem.cxx  FiveEqsTwoFluid_2DInclinedBoilingChannel.cxx  FiveEqsTwoFluid_2DInclinedSedimentation.cxx  IsothermalTwoFluid_1DDepressurisation.cxx  IsothermalTwoFluid_1DRiemannProblem.cxx  IsothermalTwoFluid_1DSedimentation.cxx  IsothermalTwoFluid_2DInclinedSedimentation.cxx  IsothermalTwoFluid_2DVidangeReservoir.cxx  SinglePhase_1DDepressurisation.cxx  SinglePhase_1DHeatedChannel.cxx  SinglePhase_1DPorosityJump.cxx  SinglePhase_1DRiemannProblem.cxx  SinglePhase_2DHeatDrivenCavity.cxx  SinglePhase_2DHeatDrivenCavity_unstructured.cxx  SinglePhase_2DHeatedChannelInclined.cxx  SinglePhase_2DLidDrivenCavity.cxx  SinglePhase_2DLidDrivenCavity_unstructured.cxx  SinglePhase_2DSphericalExplosion_unstructured.cxx  SinglePhase_2DWallHeatedChannel.cxx  SinglePhase_2DWallHeatedChannel_ChangeSect.cxx  SinglePhase_3DHeatDrivenCavity.cxx  SinglePhase_HeatedWire_2Branches.cxx  (+3 more)
CoreFlows_src/examples/Python/: CMakeLists.txt  CMakeLists.txt~  DiffusionEquation_1DHeatedRod.py  DiffusionEquation_1DHeatedRod.py~  DriftModel_1DBoilingAssembly.py  DriftModel_1DBoilingAssembly.py~  DriftModel_1DBoilingChannel.py  DriftModel_1DBoilingChannel.py~  DriftModel_1DDepressurisation.py  DriftModel_1DDepressurisation.py~  DriftModel_1DPorosityJump.py  DriftModel_1DPorosityJump.py~  DriftModel_1DPressureLoss.py  DriftModel_1DPressureLoss.py~  DriftModel_1DRiemannProblem.py  DriftModel_1DRiemannProblem.py~  DriftModel_1DVidangeReservoir.py  DriftModel_1DVidangeReservoir.py~  DriftModel_2BranchesBoilingChannels.py  DriftModel_2BranchesBoilingChannels.py~  DriftModel_2DBoilingChannelBarrier.py  DriftModel_2DBoilingChannelBarrier.py~  DriftModel_2DInclinedBoilingChannel.py  DriftModel_2DInclinedBoilingChannel.py~  DriftModel_2DInclinedBoilingChannelBarrier.py  DriftModel_2DInclinedBoilingChannelBarrier.py~  DriftModel_2DInclinedChannelGravityBarriers.py  DriftModel_2DPorosityJump.py  DriftModel_2DPorosityJump.py~  DriftModel_2DPressureLoss.py~  DriftModel_2DVidangeReservoir.py  DriftModel_2DVidangeReservoir.py~  DriftModel_2DVidangeReservoirUnstructured.py  DriftModel_2DVidangeReservoirUntructured.py  DriftModel_3DBoilingChannelBarrier.py  DriftModel_3DBoilingChannelBarrier.py~  FiveEqsTwoFluid_1DBoilingAssembly.py~  FiveEqsTwoFluid_1DBoilingChannel.py~  FiveEqsTwoFluid_1DVidangeReservoir.py  FiveEqsTwoFluid_1DVidangeReservoir.py~  (+40 more)
CoreFlows_src/gui/: CMakeLists.txt  CMakeLists.txt~
CoreFlows_src/gui/resources/: CMakeLists.txt~  SalomeApp.xml.in~
CoreFlows_src/gui/src/: CFDesktop.py~  CMakeLists.txt~  utils.py.in~
CoreFlows_src/gui/src/ui/: MainCFWidget.py  MainCFWidget.py~  MainCFWidget.ui  MainCFWidget.ui.autosave
CoreFlows_src/swig/: CMakeLists.txt  CMakeLists.txt~  CoreFlows.i
Documentation/: PhysicalModels.md  examples.md  functionalities.ipynb  functionalities.md  install.dox  numericalPage.dox.backup  numericalPage.ipynb  numericalPage.md  software.md
Documentation/Examples/: ExampleDriftModelPage.dox
Documentation/PhysicalModels/: DiffusionEq.md  DiffusionEq.md.ipynb  NSModelsPage.dox.backup  NSModelsPage.ipynb  NSModelsPage.md  ScalarModelsPage.ipynb  ScalarModelsPage.md  TransportEq.ipynb  (+3 more)
cmake_files/: FindCDMATH.cmake  FindPETSc.cmake
examples/: CMakeLists.txt  CoupledTransportDiffusionEquations_1DHeatedChannel.cxx  DiffusionEquation_1DHeatedRod.cxx  SinglePhase_2DSphericalExplosion_unstructured.cxx  StationaryDiffusionEquation_2DEF.cxx  StationaryDiffusionEquation_2DEF_StructuredTriangles.cxx  StationaryDiffusionEquation_2DEF_StructuredTriangles_Neumann.cxx  StationaryDiffusionEquation_2DEF_UnstructuredTriangles.cxx  StationaryDiffusionEquation_2DFV.cxx  StationaryDiffusionEquation_2DFV_StructuredSquares.cxx  StationaryDiffusionEquation_2DFV_StructuredTriangles_Neumann.cxx  StationaryDiffusionEquation_3DEF_StructuredTetrahedra.cxx  StationaryDiffusionEquation_3DFV_StructuredTetrahedra.cxx
swig/: CoreFlows.i
(+173 files in other folders)
